--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,15 @@
     android:background="@color/background"
     tools:context=".MainActivity">
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:text="Calculator"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_marginTop="10dp"/>
     <TextView
         android:id="@+id/previusView"
         android:layout_width="match_parent"
@@ -16,8 +24,7 @@
         android:layout_marginEnd="15sp"
         android:layout_marginTop="15sp"
         android:singleLine="true"
-        android:text="450 + 350 + 2"
-        android:gravity="end"
+        android:gravity="center"
         android:ellipsize="start"
         android:textColor="@color/txtOperation"
         android:textSize="23sp" />
@@ -28,28 +35,30 @@
         android:layout_height="150dp"
         android:layout_marginEnd="15sp"
         android:ellipsize="start"
-        android:gravity="end"
+        android:gravity="center"
         android:maxLines="1"
-        android:text="540"
         android:textColor="@color/white"
         android:textSize="70sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="12dp"
         android:layout_weight="0.8"
         android:layout_marginHorizontal="15dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/clear"
             style="@style/ACDEL"
             android:text="AC"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/delete"
             style="@style/ACDEL"
-            android:text="DEL"/>
+            android:src="@drawable/backspace"
+            android:scaleType="center"/>
+
 
         <TextView
             android:id="@+id/porcent"
@@ -146,8 +155,7 @@
 
         <TextView
             android:id="@+id/addDouble"
-            style="@style/number_keys"
-            android:text="++"/>
+            style="@style/number_keys"/>
         <TextView
             android:id="@+id/number_zero"
             style="@style/number_keys"
