--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#263435</color>
+    <color name="background">#3A4647</color>
     <color name="colorActionKey">#74b3a4</color>
     <color name= "cooler">#f5f5f5</color>
     <color name= "colorNumber">#BDC3C5</color>
