--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,22 +16,22 @@
 
     <style name="ACDEL">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/background_acdel</item>
         <item name="android:textColor">@color/colorNumber</item>
-        <item name="android:layout_margin">2dp</item>
+        <item name="android:layout_marginHorizontal">2dp</item>
         <item name="android:textSize">28dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
     <style name="operator_keys">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_height">80dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/background_operator</item>
         <item name="android:textColor">@color/colorActionKey</item>
-        <item name="android:layout_margin">2dp</item>
+        <item name="android:layout_marginHorizontal">2dp</item>
         <item name="android:textSize">28dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
